[package]
name = "aidl-parser"
version = "0.12.3"
authors = ["Benoit Walter <b.walter@meerun.de>"]
license = "MIT"
edition = "2021"
description = "Parse AIDL files, crate AST and diagnostics"
repository = "https://github.com/bwalter/rust-aidl-parser"
build = "src/build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive-getters = "0.5.0"
anyhow = "1.0"
lalrpop-util = { version = "0.19", features = ["lexer"] }
line-col = { version = "0.2", features = ["grapheme-clusters"] }
regex = "1.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-cli = "0.2.100"
wasm-opt = "0.116.1"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = "1.0"
serde_repr = "0.1"
js-sys = "0.3.76"

[build-dependencies]
lalrpop = "0.19"
lalrpop-util = { version = "0.19", features = ["lexer"] }

[dev-dependencies]
insta = { version = "1.8", features = ["redactions", "ron"] }

[features]
default = ["with-serde"]
with-serde = ["serde", "serde_derive"]
